corrections: 1. User: name.isBlank();, MIN_AGE, delete  public String toString() {